--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,3 @@
-
 body{
 	font-family: 'Poppins', sans-serif;
 	font-size: 14px;
@@ -8,8 +7,6 @@ body{
 	top: 5%;
 	left: 30%;
 	background-color: #c7ebff;
-
-
 
 }
 
@@ -44,9 +41,10 @@ h1{
 
 .green .fb{
 	width: 180px;
+	height: 56px;
 	position: fixed;
 	top: 30%;
-	right: -120px;
+	right: -119px;
 	transition: 1s;
 }
 
@@ -57,9 +55,10 @@ h1{
 
 .green .instagram{
 	width: 180px;
+	height: 56px;
 	position: fixed;
 	top: 40%;
-	right: -125px;
+	right: -120px;
 	transition: 1s;
 }
 
@@ -70,9 +69,10 @@ h1{
 
 .green .twitter{
 	width: 180px;
+	height: 56px;
 	position: fixed;
 	top: 50%;
-	right: -115px;
+	right: -120px;
 	transition: 1s;
 }
 
@@ -83,9 +83,10 @@ h1{
 
 .green .youtube{
 	width: 180px;
+	height: 56px;
 	position: fixed;
 	top: 60%;
-	right: -120px;
+	right: -121px;
 	transition: 1s;
 }
 
